k8s/synapse/resources/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
  labels: &labels
    app.kubernetes.io/component: web
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      volumes:
        - name: volume
          persistentVolumeClaim:
            claimName: volume
        - name: matrix-config
          secret:
            secretName: synapse-secret
          items:
            - key: matrix-config
              path: matrix-config
        - name: matrix-signing-key
          secret:
            secretName: synapse-secret
          items:
            - key: matrix-signing-key
              path: matrix-signing-key
        - name: log-config
          configMap:
            name: log-config
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: synapse
          image: ghcr.io/element-hq/synapse:v1.116.0
          resources:
            requests:
              memory: 100M
            limits:
              memory: 200M
          securityContext:
            privileged: false
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
            readOnlyRootFilesystem: true
            capabilities:
              drop: [ALL]
          volumeMounts:
            - name: volume
              mountPath: /data
            - name: matrix-config
              mountPath: /data/homeserver.yml
              subPath: matrix-config
              readOnly: true
            - name: matrix-signing-key
              mountPath: /data/matrix.durbin.casa.signing.key
              subPath: matrix-signing-key
              readOnly: true
            - name: log-config
              mountPath: /data/matrix.durbin.casa.log.config
              subPath: log-config
              readOnly: true
          ports:
            - name: http
              containerPort: 8008
