k8s/synapse/resources/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  selector:
    app.kubernetes.io/component: web
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: prometheus
      port: 9000
      targetPort: prometheus
