k8s/synapse/resources/internal-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-issuer
    gethomepage.dev/href: 'https://matrix.durbin.casa'
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/app: synapse
    gethomepage.dev/group: Other
    gethomepage.dev/icon: matrix-synapse
    gethomepage.dev/name: Matrix
    nginx.ingress.kubernetes.io/proxy-body-size: '0'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '600'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '600'
spec:
  ingressClassName: internal
  rules:
    - host: &host matrix.durbin.casa
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: service
                port:
                  name: http
  tls:
    - secretName: durbin-casa-wildcard-cert
      hosts:
        - *host
